# rustdoro

./: .gitignore  LICENSE  README.md
rustdoro/: Cargo.toml  build.sh
rustdoro/src/: config.rs  main.rs  notifications.rs  timer.rs  ui.rs
